# dice

06_dice_mva_memento/06_dice_mva_memento/: CMakeLists.txt  dicegui.cpp  dicegui.h  images.qrc  main.cpp
dice_memento/dice_memento/: CMakeLists.txt  dicegui.cpp  dicegui.h  main.cpp  randomnumbercaretaker.cpp  randomnumbercaretaker.h  randomnumbergenerator.cpp  randomnumbergenerator.h  randomnumbergeneratormemento.cpp  randomnumbergeneratormemento.h  resources.qrc
